--- a/profile.html
+++ b/profile.html
@@ -5,5 +5,7 @@
 	<body>
 		<h2>Muhammad Feezi bin Hamzah</h2>
 		<h2>Bus Ticketing System</h2>
+		<h2>Muhammad Fazrin Bin Safri</h2>
+		<h2>Homestay Booking System</h2>
 	</body>
 </html>
