--- a/profile.html
+++ b/profile.html
@@ -5,5 +5,7 @@
 	<body>
 		<h2>Muhammad Feezi bin Hamzah</h2>
 		<h2>Bus Ticketing System</h2>
+		<h1> Muhamad Azizi bin Zahri</h1>
+		<h1> PGOMS </h1>
 	</body>
 </html>
